Continue Transforming to Vuetify

--- a/src/renderer/assets/override.scss
+++ b/src/renderer/assets/override.scss
@@ -19,6 +19,6 @@
     src: url("assets/fonts/NotoSansCJKjp-DemiLight.otf") format("opentype");
 }
 
-*:not(.fas):not(.far):not(.icon):not(.fab):not(.fa):not(.mdi) {
-    font-family: 'Noto Sans', Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif !important;
-}
+// *:not(.fas):not(.far):not(.icon):not(.fab):not(.fa):not(.mdi) {
+//     font-family: 'Noto Sans', Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif !important;
+// }
