--- a/src/renderer/assets/override.scss
+++ b/src/renderer/assets/override.scss
@@ -19,6 +19,111 @@
     src: url("assets/fonts/NotoSansCJKjp-DemiLight.otf") format("opentype");
 }
 
-// *:not(.fas):not(.far):not(.icon):not(.fab):not(.fa):not(.mdi) {
-//     font-family: 'Noto Sans', Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif !important;
-// }
+@font-face {
+    font-family: "M PLUS 1p";
+    font-weight: 500;
+    font-style: normal;
+    src: url("assets/fonts/MPLUS1p-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "M PLUS 1p";
+    font-weight: 600;
+    font-style: normal;
+    src: url("assets/fonts/MPLUS1p-Medium.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "M PLUS 1p";
+    font-weight: 700;
+    font-style: normal;
+    src: url("assets/fonts/MPLUS1p-Bold.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "M PLUS 1p";
+    font-weight: 800;
+    font-style: normal;
+    src: url("assets/fonts/MPLUS1p-ExtraBold.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "M PLUS 1p";
+    font-weight: 900;
+    font-style: normal;
+    src: url("assets/fonts/MPLUS1p-Black.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "M PLUS 1p";
+    font-weight: 400;
+    font-style: normal;
+    src: url("assets/fonts/MPLUS1p-Light.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "M PLUS 1p";
+    font-weight: 300;
+    font-style: normal;
+    src: url("assets/fonts/MPLUS1p-Thin.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Nunito";
+    font-weight: 300;
+    font-style: normal;
+    src: url("assets/fonts/Nunito-Light.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Nunito";
+    font-weight: 300;
+    font-style: italic;
+    src: url("assets/fonts/Nunito-LightItalic.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Nunito";
+    font-weight: 100;
+    font-style: normal;
+    src: url("assets/fonts/Nunito-ExtraLight.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Nunito";
+    font-weight: 100;
+    font-style: italic;
+    src: url("assets/fonts/Nunito-ExtraLightItalic.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Nunito";
+    font-weight: normal;
+    font-style: normal;
+    src: url("assets/fonts/Nunito-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Nunito";
+    font-weight: normal;
+    font-style: italic;
+    src: url("assets/fonts/Nunito-Italic.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Nunito";
+    font-weight: bold;
+    font-style: normal;
+    src: url("assets/fonts/Nunito-Bold.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Nunito";
+    font-weight: bold;
+    font-style: italic;
+    src: url("assets/fonts/Nunito-BoldItalic.ttf") format("truetype");
+}
+
+*:not(.fas):not(.far):not(.icon):not(.fab):not(.fa):not(.mdi) {
+    font-family: 'M PLUS 1p', 'Nunito', 'Noto Sans', Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif !important;
+}
