Fix icons and navigation drawer position

--- a/src/assets/scss/extra.scss
+++ b/src/assets/scss/extra.scss
@@ -7,3 +7,14 @@
 ::-webkit-scrollbar {
   display: none;
 }
+
+#app.v-application--is-rtl .v-icon {
+  &:not(.mdi-play):not(.mdi-check) {
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: "FlipH";
+  }
+}
